--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -34,6 +34,7 @@
                                     text:"Speech To Text"
                                     subtext:""
                                     items_count:""
+                                    on_press:root.current = "screen3"
                                 ElementCard:
                                     image:"images/vdim.png"
                                     text:"Video To Images"
@@ -138,10 +139,29 @@
                         on_press: app.savetextfromtextfield()
                     MDBoxLayout:
                         orientation:'vertical'
-                    MDBoxLayout:
-                        orientation:'vertical'
+                    MDFillRoundFlatButton:
+                        text: "   Choose File Text   "
+                        pos_hint:{'center_x':.5 ,'top': 1}
+                        spacing:dp(115)
+                        on_release:app.open_file_manager()
+                    MDFillRoundFlatButton:
+                        text: "   Adapt File Text   "
+                        pos_hint:{'center_x':.5 ,'top': 1}
+                        spacing:dp(115)
+                        on_release:app.adaptTextfile()
                     
-
+    Screen:
+        name : "screen3"
+        MDBoxLayout:
+            orientation:'vertical'
+            md_bg_color:56/255,40/255,81/255,1
+            MDToolbar:
+                title:"Text To Speech"
+                left_action_items:[["arrow-left",lambda *args : setattr(mn_screen, "current", "screen1")]]
+                right_action_items: [["dots-vertical", lambda x: app.callback()]]
+            MDScreen:
+                name:'screen speech to text'
+                
                     
 
 
