--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -1,10 +1,27 @@
 <MenuScreen>:
     id : mn_screen
     Screen:
+        name : "screen0"
+        MDFloatLayout:
+            md_bg_color: 255/255, 255/255, 255/255, 1
+            Image:
+                source: "logo.png"
+                size_hint: 0.9, 0.9
+                pos_hint: {'center_x': 0.5,'center_y': 0.6}
+            MDBoxLayout:
+                pos_hint: {'center_x': 0.5,'center_y': 0.3}
+                padding:"10dp"
+                size_hint_x:.7
+                MDProgressBar:
+                    id: progress_bar
+                    orientation:"horizontal"
+                    value: 0
+    Screen:
         name : "screen1"
         MDBoxLayout:
             orientation:'vertical'
             MDToolbar:
+                id: toolbar
                 title:"All Services Adaptation"
                 left_action_items:[["menu",lambda x:None]]
                 right_action_items:[["magnify",lambda x:None]]
