--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -233,7 +233,7 @@
 
 
 
-
+#/PycharmProjects\pythonProject\P1_APP_ADaptation\video-adv.mp4
 
 <ElementCard@MDCard>:
     md_bg_color:69/255,55/255,86/255,1
