--- a/P1_APP_ADaptation/myUI1.kv
+++ b/P1_APP_ADaptation/myUI1.kv
@@ -512,7 +512,7 @@
                     font_name:"BPoppins"
                     pos_hint:{'center_x':.5 ,'center_y':.19 }
                     color: rgba(56,40,81,255)
-                    on_release: root.current = "screenlogin_UI"
+                    on_release: root.current = "screenSignUP_UI"
                     canvas.before:
                         Color:
                             rgb :rgba(56,40,81,255)
@@ -529,6 +529,7 @@
                     pos_hint:{'center_y':.95 }
                     theme_text_color:"Custom"
                     text_color:rgba(56,40,81,255)
+                    on_release: root.current = "screenlogin"
                 MDLabel:
                     text: "W E L C O M E !"
                     font_name: 'BPoppins'
@@ -545,7 +546,7 @@
                     size_hint: .7,.07
                     pos_hint:{'center_x':.5 ,'center_y':.67 }   
                     TextInput:
-                        id:email
+                        id:email_log
                         hint_text:"Email"
                         font_name:"MPoppins"
                         size_hint_y:.75
@@ -564,7 +565,7 @@
                     size_hint: .7,.07
                     pos_hint:{'center_x':.5 ,'center_y':.57 }   
                     TextInput:
-                        id:password
+                        id:password_log
                         hint_text:"Password"
                         font_name:"MPoppins"
                         size_hint_y:.75
@@ -586,7 +587,7 @@
                     background_color:0, 0, 0, 0
                     font_name:"BPoppins"
                     pos_hint:{'center_x':.5 ,'center_y':.40 }
-                    on_release: app.send_data_to_firebase(email.text,password.text)
+                    on_release: app.verify_data_login(email_log.text,password_log.text)
                     canvas.before:
                         Color:
                             rgb :rgba(56,40,81,255)
@@ -644,6 +645,190 @@
                     font_size:"12sp"
                     font_name:"BPoppins"
 
+    Screen:
+        name : "screenSignUP_UI"
+        MDScreen:
+            MDFloatLayout:
+                md_bg_color:1, 1, 1, 1
+                MDIconButton:
+                    icon:"arrow-left"
+                    pos_hint:{'center_y':.97 }
+                    theme_text_color:"Custom"
+                    text_color:rgba(56,40,81,255)
+                    on_release: root.current = "screenlogin"
+                MDLabel:
+                    text: "W E L C O M E !"
+                    font_name: 'BPoppins'
+                    font_size: "23sp"
+                    pos_hint:{'center_x':.6 ,'center_y':.92 }
+                    color: rgba(56,40,81,255)
+                MDLabel:
+                    text: "Please Check the status of all your information"
+                    font_name: 'MPoppins'
+                    font_size: "12sp"
+                    pos_hint:{'center_x':.6 ,'center_y':.88 }
+                    color: rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.80 }   
+                    TextInput:
+                        id:email
+                        hint_text:"Email"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.72 }   
+                    TextInput:
+                        id:password
+                        hint_text:"Password"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                        password:True
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.64 }   
+                    TextInput:
+                        id:name
+                        hint_text:"Name"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.56 }   
+                    TextInput:
+                        id:secondname
+                        hint_text:"Second Name"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.48 }   
+                    TextInput:
+                        id:datebirth
+                        hint_text:"Birthday Date"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.40 }   
+                    TextInput:
+                        id:adresse
+                        hint_text:"Adresse"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                MDFloatLayout:
+                    size_hint: .7,.07
+                    pos_hint:{'center_x':.5 ,'center_y':.32 }   
+                    TextInput:
+                        id:number
+                        hint_text:"Phone Number"
+                        font_name:"MPoppins"
+                        size_hint_y:.75
+                        pos_hint:{'center_x':.43 ,'center_y':.5 }
+                        background_color:1, 1, 1, 0
+                        foreground_color: rgba(0, 0, 59, 255)
+                        cursor_color:rgba(0, 0, 59, 255)
+                        font_size:"14sp"
+                        cursor_width:"2sp"
+                        multiline:False
+                    MDFloatLayout:
+                        pos_hint:{'center_x':.45 ,'center_y':.0 }
+                        size_hint_y:.03
+                        md_bg_color:rgba(56,40,81,255)
+                Button:
+                    text: "SIGN UP"
+                    size_hint:.66,.065
+                    background_color:0, 0, 0, 0
+                    font_name:"BPoppins"
+                    pos_hint:{'center_x':.5 ,'center_y':.19 }
+                    on_release: app.send_data_to_firebase(email.text,password.text,name.text,secondname.text,datebirth.text,adresse.text,number.text)
+                    canvas.before:
+                        Color:
+                            rgb :rgba(56,40,81,255)
+                        RoundedRectangle:
+                            size: self.size
+                            pos:self.pos
+                            radius:[5]
+                
+                MDLabel:
+                    text: "Do you have an account ?"
+                    color:rgba(56,40,81,255)
+                    pos_hint:{'center_x':.72 ,'center_y':.09 }
+                    font_size:"11sp"
+                    font_name:"BPoppins"
+                MDTextButton:
+                    text:"LogIN"
+                    pos_hint:{'center_x':.72,'center_y':.091}
+                    color:rgba(56,40,81,255)
+                    font_size:"12sp"
+                    font_name:"BPoppins"
                     
 
 
